# tma4280_p1

./: .gitignore  job.sh
gen_plot/: aggregate_plotdata.sh  generate_plotdata.sh  graph_template.plg  job.sh  plot.sh
lib/: lib.cpp  lib.h
lib-mpi/: lib.cpp  lib.h
lib0/: lib.cpp  lib.h
lib2/: lib.cpp  lib.h
mach0/: CMakeLists.txt
mach0/src/: main.cpp
mach1/: CMakeLists.txt
mach1/src/: main.cpp
mach2/: CMakeLists.txt
mach2/src/: main.cpp
mach3/: CMakeLists.txt
mach3/src/: main.cpp
mach4/: CMakeLists.txt
mach4/src/: main.cpp
zeta0/: CMakeLists.txt
zeta0/src/: main.cpp
zeta1/: CMakeLists.txt
zeta1/src/: main.cpp
zeta2/src/: main.cpp
zeta3/: CMakeLists.txt
zeta3/src/: main.cpp
zeta4/: CMakeLists.txt
zeta4/src/: main.cpp
